# llm-connectors-py

./: .gitignore  .pypirc.template  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: main.yml
connectors/: chatgpt_connector.py  gemini_connector.py
llm_connectors/: __init__.py  _version.py  base.py  chatgpt.py  copilot.py  deepseek.py  gemini.py
tests/: conftest.py  test_connectors.py
